--- a/data-migrator/bin/job.properties
+++ b/data-migrator/bin/job.properties
@@ -1,7 +1,8 @@
 spark.cassandra.auth.username=MWivUQjZOJgYZMcYZqmXOXbW
 spark.cassandra.auth.password=,ChW2-rHiBr.6Nfw_U5fGD64rvdXzWvNs.gRW6eFR0fFT.pPDpS1fRdluTjfB-y--aMZFiR3EIUbGkNbcqPFbqr.ZT8gSNjoL+F2OJ_nJQLMQ38TYkG0lHL0EL9Mi9dO
 spark.cassandra.connection.host=8a36706d-69f0-4bdc-9ed1-822064d3f68d-us-east1.db.astra.datastax.com
-
+spark.files=/home/hadoop/bundle.zip
+spark.cassandra.connection.config.cloud.path=bundle.zip
 
 # S3 bucket access
 spark.hadoop.fs.s3a.access.key=your-kye
